# ch-microservices

./: .checkov.baseline  .gitignore  .pre-commit-config.yaml  Makefile  README.md  api.code-workspace  app.py  cdk.context.json  docker-compose.yaml  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: deploy.yaml  status-checks.yaml
app/: .dockerignore  Dockerfile.dynamo-admin  Dockerfile.lambda  Dockerfile.local  docker-compose.yaml  pyproject.toml
app/api/: db.py  eventbridge.py  main.py
app/api/models/: downloads.py
app/api/repositories/: downloads.py
app/api/routes/: downloads.py
functions/download_service/: .dockerignore  Dockerfile.lambda  Dockerfile.local  Makefile  docker-compose.yaml  pyproject.toml
functions/download_service/code/: api_handler.py  db.py  environment.py  eventbridge.py  main.py  s3.py
functions/download_service/code/migrations/: env.py
functions/download_service/code/migrations/versions/: 202412261155_initial_revision_0a992057b082.py  202412280335_initial_revision_83367e99b9c5.py  202501040159__70d34b58cf5b.py
functions/download_service/code/models/: __init__.py  base.py  download.py
functions/download_service/code/repos/: download.py
functions/download_service/code/routes/: __init__.py  download.py
functions/email_service/: .dockerignore  Dockerfile  Dockerfile.local  alembic.ini  pyproject.toml
functions/email_service/code/: api_handler.py  db.py  environment.py  event_handler.py  eventbridge.py  main.py  ses.py
functions/email_service/code/email/: template.html
functions/email_service/code/migrations/: README.md  env.py  script.py.mako
functions/email_service/code/migrations/versions/: 202412280334_initial_revision_0da05cbf693f.py  202501040153__35cc6c8e6679.py
functions/email_service/code/models/: __init__.py  base.py  book_request.py  email.py  mailing.py
functions/email_service/code/repos/: book_request.py  email.py  mailing.py
functions/email_service/code/routes/: __init__.py  mailing.py
infra/: stack.py
infra/constructs/b1/: alarm.py  api_gateway.py  aurora_db.py  bucket.py  docker_lambda.py  firewall.py  lambda_api.py  sns_topic.py
infra/constructs/b2/: apis.py  download_service.py  email_service.py
infra/constructs/l2/: waf.py
tests/: conftest.py
