[tool.poetry]
name = "rest-api"
version = "0.0.0"
description = "API Handler"
authors = ["Andre Sionek <andresionek901@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aws-lambda-powertools = {version = "^2.15.0", extras = ["tracer"]}
fastapi = "^0.104.1"
uvicorn = {version = "^0.24.0.post1", extras = ["standard"]}
mangum = "^0.17.0"
boto3 = "^1.33.6"
pydantic = {extras = ["email"], version = "^2.6.1"}
mypy-boto3-dynamodb = "^1.34.34"
mypy-boto3-events = "^1.34.17"
